# rescueopssim

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  ISSUES_BACKLOG.md  README.md  vcpkg.json
.github/workflows/: ci.yml
apps/cli/: main.cpp
apps/ui/: main.cpp
build_test/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  rescue_cli  test_astar  test_scheduler
build_test/Testing/Temporary/: CTestCostData.txt
docs/: ARCHITECTURE.md  DETERMINISM.md  SCENARIOS.md
docs/assets/: demo_ascii.txt  demo_results.json
scenarios/: tutorial_01.json  urban_rescue_10u.json
src/models/: comms.cpp  comms.hpp  motion.cpp  motion.hpp  sensors.cpp  sensors.hpp
src/planner/: astar.cpp  astar.hpp  kalman.cpp  kalman.hpp
src/sim/: engine.cpp  engine.hpp  scheduler.cpp  scheduler.hpp  world.cpp  world.hpp
tests/: test_astar.cpp  test_common.hpp  test_scheduler.cpp
